# cookiecutter-ls-oa-ext

./: cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_slug }}/: Makefile  README.md  pyproject.toml  setup.cfg
{{ cookiecutter.project_slug }}/{{ cookiecutter.pkg_name }}/: extension.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.pkg_name }}/connexion/: localstack_api.py  localstack_app.py
