[metadata]
name = 
version = attr: {{ cookiecutter.pkg_name }}.__version__
author = {{ cookiecutter.author }}
url = https://github.com/{{ cookiecutter.github_handle }}/{{ cookiecutter.project_slug }}
description = LocalStack {{ cookiecutter.api_name }} Extension
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options.entry_points]
localstack.extensions =
    {{ cookiecutter.project_slug }}={{ cookiecutter.pkg_name }}.extension:{{ cookiecutter.extension_class }}

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools>=65
    wheel>=0.38
    pip>=22.3.1
    plux>=1.3
install_requires =
    stevedore>=3.4
    plux>=1.3
    connexion[swagger-ui]
    python_dateutil
    localstack>=1.3.0

test_requires =
    pytest>=6.2.4

[options.extras_require]
dev =
    pytest>=6.2.4
    black==22.3.
    isort==5.10.1

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md, **/*.yaml